bootstrap rows/cols

--- a/views/index.jade
+++ b/views/index.jade
@@ -35,11 +35,14 @@ block content
         .project
           p a project
 
-
+  .container
     .row
-      #skills
-        h1 Skills
+      .col-lg-12
+        #skills
+          h1 Skills
 
+  .container
     .row
-      #contact
-        h1 Contact me
+      .col-lg-12
+        #contact
+          h1 Contact me
