i shouldn't be up so late

--- a/views/index.jade
+++ b/views/index.jade
@@ -40,6 +40,33 @@ block content
       .col-lg-12
         #skills
           h1 Skills
+    .row
+      .col-sm-3
+        p Javascript
+      .col-sm-3
+        p 4/5
+      .col-sm-3
+        p C++
+      .col-sm-3
+        p 3/5
+    .row
+      .col-sm-3
+        p HTML
+      .col-sm-3
+        p 5/5
+      .col-sm-3
+        p C
+      .col-sm-3
+        p 3/5
+    .row
+      .col-sm-3
+        p CSS
+      .col-sm-3
+        p 5/5
+      .col-sm-3
+        p Ruby
+      .col-sm-3
+        p 3/5
 
   .container
     .row
