drew up the contact form

--- a/views/index.jade
+++ b/views/index.jade
@@ -73,3 +73,6 @@ block content
       .col-lg-12
         #contact
           h1 Contact me
+    .row
+      .col-lg-12
+        include ./includes/contact_form.jade
