--- a/public/styles/scss/styles.scss
+++ b/public/styles/scss/styles.scss
@@ -1,6 +1,14 @@
 body {
+  height: 100%;
   font-family: lato, sans-serif;
   padding-top: 60px;
+}
+
+#wrap {
+  min-height: 100%;
+  height: auto;
+  margin: 0 auto -60px;
+  padding: 0 0 60px;
 }
 
 nav.navbar {
@@ -34,10 +42,11 @@ nav.navbar {
 }
 
 #footer {
+  height: 50px;
+  position: fixed;
   padding-top: 15px;
   background-color: black;
   color: lightgray;
-  position: absolute;
   width: 100%;
   bottom: 0;
 }
