--- a/views/includes/footer.jade
+++ b/views/includes/footer.jade
@@ -1,3 +1,5 @@
 #footer.text-center
   .container
-    p Copyright &copy; wahidrahim.com 2016
+    .row
+      .col-lg-12
+        p Copyright &copy; wahidrahim.com 2016
