--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,8 +6,14 @@ html
 
     link(href='https://fonts.googleapis.com/css?family=Lato:400,700,300,900', rel='stylesheet', type='text/css')
   body
-    include ./includes/navbar.jade
 
-    block content
+    #wrap
+      include ./includes/navbar.jade
+      block content
 
-    include ./includes/footer.jade
+   #footer.text-center
+    .container
+      .row
+        .col-lg-12
+          p Copyright &copy; wahidrahim.com 2016 
+    //-include ./includes/footer.jade
