using packery for displaying projects

--- a/views/index.jade
+++ b/views/index.jade
@@ -14,26 +14,20 @@ block content
     .container
       .row
         .col-lg-12.portfolio
-          h1 Portfolio
+          h1 Projects
       .row
-        .col-sm-4
-          .project
-            p a project
-        .col-sm-4
-          .project
-            p a project
-        .col-sm-4
-          .project
-            p a project
-        .col-sm-4
-          .project
-            p a project
-        .col-sm-4
-          .project
-            p a project
-        .col-sm-4
-          .project
-            p a project
+        .col-lg-12
+          .projects
+            .project
+              p collaborative-whiteboard
+            .project
+              p candy-crash
+            .project.special1
+              p candle life
+            .project
+              p isotope-reddit
+            .project.special1
+              p breakout-js
 
   #skills.container-fluid
     .container
