--- a/views/layout.jade
+++ b/views/layout.jade
@@ -17,3 +17,6 @@ html
       .row
         .col-lg-12
           p Copyright &copy; wahidrahim.com 2016 
+
+    script(src='/scripts/packery.pkgd.min.js')
+    script(src='/scripts/scripts.js')
