--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -39,9 +39,11 @@ nav.navbar .navbar-brand {
   height: 300px;
   background-color: #eee;
 }
+.projects {
+  margin-bottom: 15px;
+}
 .project {
-  width: 100%;
-  height: 300px;
+  background-color: #f0f;
 }
 .portfolio > h1,
 .skills > h1,
