--- a/public/styles/styles.styl
+++ b/public/styles/styles.styl
@@ -36,9 +36,13 @@ nav.navbar
   height: 300px
   background-color: #eee
 
+.projects
+  margin-bottom: 15px
+
 .project
-  width: 100%
-  height: 300px
+  background-color: #f0f
+  //width: 300px
+  //height: 200px
 
 .portfolio > h1,
 .skills > h1,
