--- a/views/index.jade
+++ b/views/index.jade
@@ -10,81 +10,14 @@ block content
             h1 Wahid Rahim
             h5 developer | blogger | entrepreneur
 
-  #portfolio.container-fluid
-    .container
-      .row
-        .col-lg-12.portfolio
-          h1 Projects
-      .row
-        .col-lg-12
-          .projects
-            .project
-              p collaborative-whiteboard
-            .project
-              p candy-crash
-            .project.special1
-              p candle life
-            .project
-              p isotope-reddit
-            .project.special1
-              p breakout-js
-
-  #skills.container-fluid
-    .container
-      .row
-        .col-lg-12.skills
-          h1 Skills
-      .row
-        .col-sm-2
-        .col-sm-1
-          p.text-center Javascript
-        .col-sm-3
-          .progress
-            .progress-bar(role='progressbar', aria-valuemin='0', aria-valuenow=skills.js, aria-valuemax='100', style='width: #{skills.js}%')
-
-        .col-sm-1
-          p.text-center HTML
-        .col-sm-3
-          .progress
-            .progress-bar(role='progressbar', aria-valuemin='0', aria-valuenow=skills.html, aria-valuemax='100', style='width: #{skills.html}%')
-        .col-sm-2
-
-      .row
-        .col-sm-2
-        .col-sm-1
-          p.text-center CSS
-        .col-sm-3
-          .progress
-            .progress-bar(role='progressbar', aria-valuemin='0', aria-valuenow=skills.css, aria-valuemax='100', style='width: #{skills.css}%')
-
-        .col-sm-1
-          p.text-center C++
-        .col-sm-3
-          .progress
-            .progress-bar(role='progressbar', aria-valuemin='0', aria-valuenow=skills.cpp, aria-valuemax='100', style='width: #{skills.cpp}%')
-        .col-sm-2
-
-      .row
-        .col-sm-2
-        .col-sm-1
-          p.text-center C
-        .col-sm-3
-          .progress
-            .progress-bar(role='progressbar', aria-valuemin='0', aria-valuenow=skills.c, aria-valuemax='100', style='width: #{skills.c}%')
-
-        .col-sm-1
-          p.text-center Ruby
-        .col-sm-3
-          .progress
-            .progress-bar(role='progressbar', aria-valuemin='0', aria-valuenow=skills.ruby, aria-valuemax='100', style='width: #{skills.ruby}%')
-        .col-sm-2
-
+  include includes/projects
+  include includes/skills
 
   #contact.container-fluid
     .container
       .row
-        .col-lg-12.contact
-          h1 Contact me
+        .col-lg-12
+          h1.contact Contact me
       .row
         .col-lg-12
           include ./includes/contact_form.jade
