--- a/public/styles/styles.styl
+++ b/public/styles/styles.styl
@@ -28,25 +28,21 @@ nav.navbar
     color: #fff
     font-weight: 900
 
-#portfolio
+#projects
   height: 100%
-  padding-bottom: 10px
-
-#skills
-  height: 300px
-  background-color: #eee
-
-.projects
-  margin-bottom: 15px
+  padding-bottom: 20px
 
 .project
   background-color: #f0f
-  //width: 300px
-  //height: 200px
 
-.portfolio > h1,
-.skills > h1,
-.contact > h1
+#skills
+  height: 100%
+  background-color: #eee
+  padding-bottom: 10px
+
+h1.projects,
+h1.skills,
+h1.contact
   font-weight: 900
 
 #footer
