--- a/views/index.jade
+++ b/views/index.jade
@@ -10,14 +10,14 @@ block content
             h1 Wahid Rahim
             h5 developer | blogger | entrepreneur
 
-  include includes/projects
+  include includes/portfolio
   include includes/skills
 
   #contact.container-fluid
     .container
       .row
         .col-lg-12
-          h1.contact Contact me
+          h1 Contact me
       .row
         .col-lg-12
           include ./includes/contact_form.jade
