--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -2,12 +2,6 @@ body {
   font-family: lato, sans-serif;
   padding-top: 60px;
 }
-#wrap {
-  min-height: 100%;
-  height: auto;
-  margin: 0 auto -60px;
-  padding: 0 0 60px;
-}
 nav.navbar {
   padding: 5px;
 }
@@ -67,12 +61,18 @@ h1.skills,
 h1.contact {
   font-weight: 900;
 }
+#wrap {
+  min-height: 100%;
+  height: auto;
+  margin: 0 auto -60px;
+  padding: 0 0 60px;
+}
 #footer {
-  position: fixed;
-  height: 50px;
-  padding-top: 15px;
+  bottom: 0;
+  margin-top: 10px;
+  width: 100%;
+  height: 60px;
+  padding-top: 20px;
   background-color: #000;
   color: #d3d3d3;
-  width: 100%;
-  bottom: 0;
 }
