--- a/views/layout.jade
+++ b/views/layout.jade
@@ -18,5 +18,6 @@ html
         .col-lg-12
           p Copyright &copy; wahidrahim.com 2016 
 
+    script(src='https://code.jquery.com/jquery-1.12.0.min.js')
     script(src='/scripts/packery.pkgd.min.js')
     script(src='/scripts/scripts.js')
