--- a/views/includes/portfolio.jade
+++ b/views/includes/portfolio.jade
@@ -6,19 +6,21 @@
     .row
       .col-lg-12
         .portfolio
-          .project
-            p collaborative-whiteboard
-          .project#candy-crash
-            img(src='images/candy-crash.gif')
-            h3 Candy-Crash
-            a(href='https://github.com/wahidrahim/Candy-Crash') https://github.com/wahidrahim/Candy-Crash
-          .project.special1
-            p candle life
-          .project
-            p isotope-reddit
+          .project#blackboard
+            h3 blackboard
+            a(href='http://wahidrahim.com:3000/demo/blackboard', target='_blank') demo
+            br
+            a(href='https://github.com/wahidrahim/blackboard' target='_blank') https://github.com/wahidrahim/blackboard
           .project#breakout-js
             video.breakout-js-demo(autoplay loop)
               source(src='https://zippy.gfycat.com/BeautifulLoathsomeDragon.webm', type='video/webm')
               source(src='https://zippy.gfycat.com/BeautifulLoathsomeDragon.mp4', type='video/mp4')
             h3 Breakout-JS
+            a(href='https://goo.gl/Ef3CsR', target='_blank') demo
+            br
             a(href='https://github.com/wahidrahim/Breakout-JS') https://github.com/wahidrahim/Breakout-JS
+          .project#candy-crash
+            img(src='images/candy-crash.gif')
+            h3 Candy-Crash
+            a(href='https://github.com/wahidrahim/Candy-Crash' target='_blank') https://github.com/wahidrahim/Candy-Crash
+
