--- a/views/index.jade
+++ b/views/index.jade
@@ -5,8 +5,8 @@ block content
     .container
       .row
         .col-lg-12
-          p desk photo goes here
-          .text-right
+          //-p desk photo goes here
+          #title
             h1 Wahid Rahim
             h5 developer | blogger | entrepreneur
 
