--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -55,6 +55,9 @@ nav.navbar .navbar-brand {
   margin: 0;
   padding: 0;
 }
+.project p {
+  color: #777;
+}
 .project h3 {
   font-weight: bold;
 }
