--- a/views/includes/portfolio.jade
+++ b/views/includes/portfolio.jade
@@ -7,8 +7,9 @@
       .col-lg-12
         .portfolio
           .project#blackboard
-            h3 blackboard
-            a(href='http://wahidrahim.com:3000/demo/blackboard', target='_blank') demo
+            h3 Blackboard
+            p #[i Node.js, Express.js, Socket.io, Fabric.js, CoffeeScript]
+            a(href='http://wahidrahim.com:3000/demo/blackboard', target='_blank') #[b demo]
             br
             a(href='https://github.com/wahidrahim/blackboard' target='_blank') https://github.com/wahidrahim/blackboard
           .project#breakout-js
@@ -16,11 +17,13 @@
               source(src='https://zippy.gfycat.com/BeautifulLoathsomeDragon.webm', type='video/webm')
               source(src='https://zippy.gfycat.com/BeautifulLoathsomeDragon.mp4', type='video/mp4')
             h3 Breakout-JS
-            a(href='https://goo.gl/Ef3CsR', target='_blank') demo
+            p #[i JavaScript, HTML, CSS]
+            a(href='https://goo.gl/Ef3CsR', target='_blank') #[b demo]
             br
             a(href='https://github.com/wahidrahim/Breakout-JS') https://github.com/wahidrahim/Breakout-JS
           .project#candy-crash
             img(src='images/candy-crash.gif')
             h3 Candy-Crash
+            p #[i C++, Bash, X-graphics]
             a(href='https://github.com/wahidrahim/Candy-Crash' target='_blank') https://github.com/wahidrahim/Candy-Crash
 
