--- a/views/includes/skills.jade
+++ b/views/includes/skills.jade
@@ -47,3 +47,19 @@
         .progress
           .progress-bar(role='progressbar', aria-valuemin='0', aria-valuenow=skills.ruby, aria-valuemax='100', style='width: #{skills.ruby}%')
       .col-sm-2
+
+    .row
+      .col-sm-2
+      .col-sm-1
+        p.text-center Java
+      .col-sm-3
+        .progress
+          .progress-bar(role='progressbar', aria-valuemin='0', aria-valuenow=skills.ruby, aria-valuemax='100', style='width: #{skills.java}%')
+
+      .col-sm-1
+        p.text-center C#
+      .col-sm-3
+        .progress
+          .progress-bar(role='progressbar', aria-valuemin='0', aria-valuenow=skills.ruby, aria-valuemax='100', style='width: #{skills.csharp}%')
+      .col-sm-2
+
