--- a/public/styles/styles.styl
+++ b/public/styles/styles.styl
@@ -103,3 +103,13 @@ h1.contact
   padding-top: 20px
   background-color: black
   color: lightgray
+
+#skills
+  background: #ddd
+
+.progress
+  background-color: #333
+
+  .progress-bar
+    background-color: cyan
+    background-image -webkit-linear-gradient(top, rgba(255, 255, 255, .25), rgba(0, 0, 0, .25)), -webkit-linear-gradient(left, #00ffff, #0099ff)
