--- a/public/styles/styles.styl
+++ b/public/styles/styles.styl
@@ -42,6 +42,11 @@ nav.navbar
   margin-bottom: 20px
   min-height: 420px !important
 
+.portfolio:after
+  content: ' '
+  display: block
+  clear: both
+
 .project
   *
     margin: 0
