--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -46,6 +46,11 @@ nav.navbar .navbar-brand {
   margin-bottom: 20px;
   min-height: 420px !important;
 }
+.portfolio:after {
+  content: ' ';
+  display: block;
+  clear: both;
+}
 .project {
   border: 1px solid #dadada;
   padding: 10px;
