--- a/public/styles/styles.styl
+++ b/public/styles/styles.styl
@@ -48,6 +48,9 @@ nav.navbar
   clear: both
 
 .project
+  img, video
+    max-width: 350px
+
   *
     margin: 0
     padding: 0
@@ -63,18 +66,6 @@ nav.navbar
     font-weight: bold
   a
     font-size: 1.2em
-
-
-#blackboard
-  width: 350px
-
-#candy-crash
-  img
-    width: 360px
-
-#breakout-js
-  video
-    width: 360px
 
 #skills
   height: 100%
