--- a/views/includes/portfolio.jade
+++ b/views/includes/portfolio.jade
@@ -7,6 +7,9 @@
       .col-lg-12
         .portfolio
           .project#blackboard
+            video.blackboard-demo(autoplay loop)
+              source(src='https://zippy.gfycat.com/TerribleOptimalBlackbuck.webm')
+              source(src='https://zippy.gfycat.com/TerribleOptimalBlackbuck.mp4')
             h3 Blackboard
             p #[i Node.js, Express.js, Socket.io, Fabric.js, CoffeeScript]
             a(href='http://wahidrahim.com:3000/demo/blackboard', target='_blank') #[b demo]
