added resize-font.vim card

--- a/views/includes/portfolio.jade
+++ b/views/includes/portfolio.jade
@@ -2,7 +2,7 @@
   .container
     .row
       .col-lg-12
-        h1 Portfolio
+        h1(style='visibility: hidden') Portfolio
     .row
       .col-lg-12
         .portfolio
@@ -14,7 +14,8 @@
             p #[i Node.js, Express.js, Socket.io, Fabric.js, CoffeeScript]
             a(href='http://wahidrahim.com:3000/demo/blackboard', target='_blank') #[b demo]
             br
-            a(href='https://github.com/wahidrahim/blackboard' target='_blank') https://github.com/wahidrahim/blackboard
+            a(href='https://github.com/wahidrahim/blackboard' target='_blank')
+              | https://github.com/wahidrahim/blackboard
           .project#breakout-js
             video.breakout-js-demo(autoplay loop)
               source(src='https://zippy.gfycat.com/BeautifulLoathsomeDragon.webm', type='video/webm')
@@ -23,10 +24,17 @@
             p #[i JavaScript, HTML, CSS]
             a(href='https://goo.gl/Ef3CsR', target='_blank') #[b demo]
             br
-            a(href='https://github.com/wahidrahim/Breakout-JS') https://github.com/wahidrahim/Breakout-JS
+            a(href='https://github.com/wahidrahim/Breakout-JS')
+              | https://github.com/wahidrahim/Breakout-JS
           .project#candy-crash
             img(src='images/candy-crash.gif')
             h3 Candy-Crash
             p #[i C++, Bash, X-graphics]
-            a(href='https://github.com/wahidrahim/Candy-Crash' target='_blank') https://github.com/wahidrahim/Candy-Crash
-
+            a(href='https://github.com/wahidrahim/Candy-Crash' target='_blank')
+              | https://github.com/wahidrahim/Candy-Crash
+          .project#resize-font-vim
+            img(src='http://i.imgur.com/qsDPtsj.gif')
+            h3 resize-font.vim
+            p #[i VimL]
+            a(href='https://github.com/wahidrahim/resize-font.vim' target='_blank')
+              | https://github.com/wahidrahim/resize-font.vim
