--- a/views/includes/portfolio.jade
+++ b/views/includes/portfolio.jade
@@ -2,7 +2,7 @@
   .container
     .row
       .col-lg-12
-        h1(style='visibility: hidden') Portfolio
+        h1 Portfolio
     .row
       .col-lg-12
         .portfolio
