--- a/views/includes/portfolio.jade
+++ b/views/includes/portfolio.jade
@@ -1,8 +1,13 @@
 #portfolio.container-fluid
   .container
     .row
-      .col-lg-12
+      .col-lg-6
         h1 Portfolio
+      .col-lg-6
+        #title
+          h1 Wahid Rahim
+          h5 developer | blogger | entrepreneur
+
     .row
       .col-lg-12
         .portfolio
