--- a/views/index.jade
+++ b/views/index.jade
@@ -5,9 +5,9 @@ block content
     .container
       .row
         .col-lg-12
-          #title
-            h1 Wahid Rahim
-            h5 developer | blogger | entrepreneur
+          //-#title
+            //-h1 Wahid Rahim
+            //-h5 developer | blogger | entrepreneur
 
   include includes/portfolio
   include includes/skills
