--- a/public/styles/styles.styl
+++ b/public/styles/styles.styl
@@ -19,9 +19,11 @@ nav.navbar
   background-image: url(../images/mtns.png)
   background-repeat: no-repeat
   background-size: cover
-  height: 500px
   background-color: #000
   color: #fff
+  position: fixed
+  height: 500px
+  width: 100%
   h1
     font-weight: 900
   #title
@@ -29,12 +31,17 @@ nav.navbar
     right: 0px
     bottom: -420px
 
+#portfolio, #skills, #contact
+  position: relative
+  top: 500px
+
 
 #portfolio
   background-color: #363434
   min-height: 100% !important
   h1
     color #fff
+    text-shadow: 0 1px 3px rgba(0,0,0,0.24), 0 1px 2px rgba(0,0,0,0.48);
 
 .portfolio
   display: block
@@ -48,6 +55,8 @@ nav.navbar
   clear: both
 
 .project
+  box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+
   img, video
     max-width: 350px
 
@@ -76,6 +85,8 @@ nav.navbar
 #skills h1,
 #contact h1
   font-weight: 900
+  text-shadow: 0 1px 3px rgba(0,0,0,0.24), 0 1px 2px rgba(0,0,0,0.48);
+
 h1.portfolio,
 h1.skills,
 h1.contact
@@ -109,3 +120,12 @@ h1.contact
   .progress-bar
     background-color: cyan
     background-image -webkit-linear-gradient(top, rgba(255, 255, 255, .25), rgba(0, 0, 0, .25)), -webkit-linear-gradient(left, #00ffff, #0099ff)
+
+#title
+  h1,h5
+    text-shadow: 0 1px 3px rgba(0,0,0,0.24), 0 1px 2px rgba(0,0,0,0.48);
+    color: #FAFAFA
+
+  position: absolute
+  top: -200px
+  right: 20px
