--- a/views/includes/portfolio.jade
+++ b/views/includes/portfolio.jade
@@ -17,16 +17,28 @@
               source(src='https://zippy.gfycat.com/TerribleOptimalBlackbuck.mp4')
             h3 Blackboard
             p #[i Node.js, Express.js, Socket.io, Fabric.js, CoffeeScript]
+            //-span Real-time multi-user drawing application. Made simply, thanks to Socket.io and Fabric.js.
+            //-br
             a(href='http://wahidrahim.com:3000/demo/blackboard', target='_blank') #[b demo]
             br
             a(href='https://github.com/wahidrahim/blackboard' target='_blank')
               | https://github.com/wahidrahim/blackboard
+          .project#mean-todo
+            img(src='http://i.imgur.com/uHPveze.jpg')
+            h3 mean-todo-app
+            p #[i MongoDB, Express.js, Angular.js, Node.js]
+            //-span The Hello World of CRUD apps.
+            //-br
+            a(href='https://github.com/wahidrahim/mean-todo-app')
+              | https://github.com/wahidrahim/mean-todo-app
           .project#breakout-js
             video.breakout-js-demo(autoplay loop)
               source(src='https://zippy.gfycat.com/BeautifulLoathsomeDragon.webm', type='video/webm')
               source(src='https://zippy.gfycat.com/BeautifulLoathsomeDragon.mp4', type='video/mp4')
             h3 Breakout-JS
             p #[i JavaScript, HTML, CSS]
+            //-span The classic game, in pure Javascript.
+            //-br
             a(href='https://goo.gl/Ef3CsR', target='_blank') #[b demo]
             br
             a(href='https://github.com/wahidrahim/Breakout-JS')
@@ -35,11 +47,15 @@
             img(src='images/candy-crash.gif')
             h3 Candy-Crash
             p #[i C++, Bash, X-graphics]
+            //-span A match-3 type of game, written in C++, in collaboration with Larry Li.
+            //-br
             a(href='https://github.com/wahidrahim/Candy-Crash' target='_blank')
               | https://github.com/wahidrahim/Candy-Crash
           .project#resize-font-vim
             img(src='http://i.imgur.com/qsDPtsj.gif')
             h3 resize-font.vim
             p #[i VimL]
+            //-span A tiny script for making fonts bigger/smaller in gVim.
+            //-br
             a(href='https://github.com/wahidrahim/resize-font.vim' target='_blank')
               | https://github.com/wahidrahim/resize-font.vim
